default tab change

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -3,8 +3,8 @@
 <ul class="tab">
 	<button class="tablinks" onclick="openTab(event, 'Survivor-Perks')" data-tab-open="">Survivor Perks</button>
 	<button class="tablinks" onclick="openTab(event, 'Killer-Perks')" data-tab-open="">Killer Perks</button>
-	<button class="tablinks" onclick="openTab(event, 'Killer-Addons')"  data-tab-open="">Killer Addons</button>
-	<button class="tablinks" onclick="openTab(event, 'Items')" data-tab-open="default">Items</button>
+	<button class="tablinks" onclick="openTab(event, 'Killer-Addons')"  data-tab-open="default">Killer Addons</button>
+	<button class="tablinks" onclick="openTab(event, 'Items')" data-tab-open="">Items</button>
 
 </ul>
 
